--- a/client/products/edit/index.html
+++ b/client/products/edit/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/static/pretendard.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="/nodejs-html-css-js-online-shop/client/layout/index.css">
-    <link rel="stylesheet" href="/nodejs-html-css-js-online-shop/client/products/edit/index.css">
-    <link rel="stylesheet" href="/nodejs-html-css-js-online-shop/client/products/list/index.css">
+    <link rel="stylesheet" href="/client/layout/index.css">
+    <link rel="stylesheet" href="/client/products/edit/index.css">
+    <link rel="stylesheet" href="/client/products/list/index.css">
     <!--  layout  -->
-    <script src="/nodejs-html-css-js-online-shop/client/layout/index.js"></script>
+    <script src="/client/layout/index.js"></script>
     <!--  common  -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/dayjs.min.js"></script>
@@ -27,16 +27,16 @@
             <div class="menu-item open">
                 <div class="menu-item-title"><div>상품 관리</div><div class="open">-</div><div class="closed">+</div></div>
                 <div class="menu-child-wrap">
-                    <a class="menu-child active" href="/nodejs-html-css-js-online-shop/client/products/list/index.html">상품관리</a>
-                    <a class="menu-child" href="/nodejs-html-css-js-online-shop/client/categories/list/index.html">카테고리관리</a>
+                    <a class="menu-child active" href="/client/products/list/index.html">상품관리</a>
+                    <a class="menu-child" href="/client/categories/list/index.html">카테고리관리</a>
                 </div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-title"><div>정책 관리</div><div class="open">-</div><div class="closed">+</div></div>
                 <div class="menu-child-wrap">
-                    <a class="menu-child" href="/nodejs-html-css-js-online-shop/client/point-policy/list/index.html">포인트정책관리</a>
-                    <a class="menu-child" href="/nodejs-html-css-js-online-shop/client/coupon-policy/list/index.html">쿠폰정책관리</a>
-                    <a class="menu-child" href="/nodejs-html-css-js-online-shop/client/stamp-policy/list/index.html">스탬프정책관리</a>
+                    <a class="menu-child" href="/client/point-policy/list/index.html">포인트정책관리</a>
+                    <a class="menu-child" href="/client/coupon-policy/list/index.html">쿠폰정책관리</a>
+                    <a class="menu-child" href="/client/stamp-policy/list/index.html">스탬프정책관리</a>
                 </div>
             </div>
         </nav>
@@ -141,7 +141,7 @@
 
     document.querySelector('.cancelButton').addEventListener('click', function onClickCancel() {
       if (confirm('수정사항이 반영되지 않아요. 페이지를 나갈까요?')) {
-        window.location.href = '/nodejs-html-css-js-online-shop/client/products/list/index.html';
+        window.location.href = '/client/products/list/index.html';
       }
     });
 
@@ -154,14 +154,14 @@
             'Content-Type': 'application/json'
           }
         }).then(function () {
-          window.location.href = '/nodejs-html-css-js-online-shop/client/products/list/index.html';
+          window.location.href = '/client/products/list/index.html';
           alert('삭제되었습니다.');
         });
       }
     });
 
     document.querySelector('.submitButton').addEventListener('click', function onClickSubmit() {
-      window.location.href = '/nodejs-html-css-js-online-shop/client/products/list/index.html';
+      window.location.href = '/client/products/list/index.html';
       alert('수정되었습니다');
     });
   });
