--- a/client/products/list/index.html
+++ b/client/products/list/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/static/pretendard.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="/nodejs-html-css-js-online-shop/client/layout/index.css">
-    <link rel="stylesheet" href="/nodejs-html-css-js-online-shop/client/products/list/index.css">
+    <link rel="stylesheet" href="/client/layout/index.css">
+    <link rel="stylesheet" href="/client/products/list/index.css">
     <!--  layout  -->
-    <script src="/nodejs-html-css-js-online-shop/client/layout/index.js"></script>
+    <script src="/client/layout/index.js"></script>
     <!--  common  -->
-    <script src="/nodejs-html-css-js-online-shop/client/utils/dom-utils.js"></script>
+    <script src="/client/utils/dom-utils.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.11.7/dayjs.min.js"></script>
     <title>어드민 사이트</title>
@@ -27,16 +27,16 @@
             <div class="menu-item open">
                 <div class="menu-item-title"><div>상품 관리</div><div class="open">-</div><div class="closed">+</div></div>
                 <div class="menu-child-wrap">
-                    <a class="menu-child active" href="/nodejs-html-css-js-online-shop/client/products/list/index.html">상품관리</a>
-                    <a class="menu-child" href="/nodejs-html-css-js-online-shop/client/categories/list/index.html">카테고리관리</a>
+                    <a class="menu-child active" href="/client/products/list/index.html">상품관리</a>
+                    <a class="menu-child" href="/client/categories/list/index.html">카테고리관리</a>
                 </div>
             </div>
             <div class="menu-item">
                 <div class="menu-item-title"><div>정책 관리</div><div class="open">-</div><div class="closed">+</div></div>
                 <div class="menu-child-wrap">
-                    <a class="menu-child" href="/nodejs-html-css-js-online-shop/client/point-policy/list/index.html">포인트정책관리</a>
-                    <a class="menu-child" href="/nodejs-html-css-js-online-shop/client/coupon-policy/list/index.html">쿠폰정책관리</a>
-                    <a class="menu-child" href="/nodejs-html-css-js-online-shop/client/stamp-policy/list/index.html">스탬프정책관리</a>
+                    <a class="menu-child" href="/client/point-policy/list/index.html">포인트정책관리</a>
+                    <a class="menu-child" href="/client/coupon-policy/list/index.html">쿠폰정책관리</a>
+                    <a class="menu-child" href="/client/stamp-policy/list/index.html">스탬프정책관리</a>
                 </div>
             </div>
         </nav>
@@ -94,7 +94,7 @@
           `<tr>
             <td>${i + 1}</td>
             <td>${product.id}</td>
-            <td><a href="/nodejs-html-css-js-online-shop/client/products/edit/index.html?id=${product.id}">${product.name}</td>
+            <td><a href="/client/products/edit/index.html?id=${product.id}">${product.name}</td>
             <td><label class="status ${product.status}">${STATUS_TRANSLATOR[product.status]}</label></td>
             <td>${dayjs(product.createdAt).format('YYYY.MM.DD HH:mm:ss')}</td>
             <td>${dayjs(product.updatedAt).format('YYYY.MM.DD HH:mm:ss')}</td>
@@ -108,7 +108,7 @@
     });
 
     document.querySelector('.goNewPage').addEventListener('click', function () {
-      window.location.href = '/nodejs-html-css-js-online-shop/client/products/new/index.html';
+      window.location.href = '/client/products/new/index.html';
     });
   });
 </script>
