api url 변경, 유효성검사추가

--- a/client/products/list/index.html
+++ b/client/products/list/index.html
@@ -80,7 +80,7 @@
   };
 
   $(function() {
-    fetch('http://127.0.0.1:3001/products?pageSize=10', {
+    fetch('/api/products?pageSize=10', {
       method: 'GET',
       headers: {
         'Accept': 'application/json',
