--- a/client/products/new/index.html
+++ b/client/products/new/index.html
@@ -132,7 +132,7 @@
         return;
       }
 
-      fetch(`http://127.0.0.1:3001/products`, {
+      fetch(`/api/products`, {
         method: 'POST',
         headers: {
           'Accept': 'application/json',
