--- a/client/products/edit/index.html
+++ b/client/products/edit/index.html
@@ -114,7 +114,7 @@
 <script type="text/javascript">
   $(function(){
     const id = (new URL(location.href)).searchParams.get('id');
-    fetch(`http://127.0.0.1:3001/products/${id}`, {
+    fetch(`/api/products/${id}`, {
       method: 'GET',
       headers: {
         'Accept': 'application/json',
@@ -147,7 +147,7 @@
 
     document.querySelector('.deleteButton').addEventListener('click', function onClickCancel() {
       if (confirm('정말 삭제하시겠습니까?')) {
-        fetch(`http://127.0.0.1:3001/products/${id}`, {
+        fetch(`/api/products/${id}`, {
           method: 'DELETE',
           headers: {
             'Accept': 'application/json',
