상품관리 > 카테고리 렌더링코드정리

--- a/client/products/new/index.html
+++ b/client/products/new/index.html
@@ -66,13 +66,12 @@
                         </tr>
                         <tr>
                             <th>카테고리</th>
-                            <td>
-                                <select class="category">
-                                    <option value="FOOD">식품</option>
-                                    <option value="DRINKS">음료</option>
-                                    <option value="COSMETIC">뷰티</option>
-                                    <option value="APPAREL">의류</option>
-                                </select>
+                            <td class="category-wrap">
+                                <select class="category1Id"></select>
+                                <div> > </div>
+                                <select class="category2Id"></select>
+                                <div> > </div>
+                                <select class="category3Id"></select>
                             </td>
                         </tr>
                         <tr>
@@ -239,6 +238,35 @@
             )
           })
         });
+    });
+  });
+</script>
+<script type="text/javascript">
+  $(function() {
+    function getCategories() {
+      return fetch('http://127.0.0.1:3001/api/categories')
+        .then(response => response.json())
+        .then((response) => {
+          return response.contents;
+        });
+    }
+    function renderCategories(categories, category1Id, category2Id, category3Id) {
+      const category1List = categories;
+      const category2List = category1List.find(category1 => category1.id === Number(category1Id))?.child;
+      const category3List = category2List.find(category2 => category2.id === Number(category2Id))?.child;
+      document.querySelector('.category1Id').innerHTML = category1List.length === 0 ? `<option value="">(없음)</option>` : category1List.map(category1 => `<option value="${category1.id}">${category1.name}</option>`);
+      document.querySelector('.category1Id').value = category1Id || '';
+      document.querySelector('.category2Id').innerHTML = category2List.length === 0 ? `<option value="">(없음)</option>` : category2List.map(category2 => `<option value="${category2.id}">${category2.name}</option>`);
+      document.querySelector('.category2Id').value = category2Id || '';
+      document.querySelector('.category3Id').innerHTML = category3List.length === 0 ? `<option value="">(없음)</option>` : category3List.map(category3 => `<option value="${category3.id}">${category3.name}</option>`);
+      document.querySelector('.category3Id').value = category3Id || '';
+    }
+
+    getCategories().then((categories) => {
+      const category1 = categories?.[0];
+      const category2 = category1?.child?.[0];
+      const category3 = category2?.child?.[0];
+      renderCategories(categories, category1?.id, category2?.id, category3?.id)
     });
   });
 </script>
